crates/test-generator/tests/snapshots/tsx/test_generated_jsx_self_closing_element.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const element = <Component2 prop3={value16} />;

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "element")
      value: (jsx_self_closing_element
        name: (identifier "Component2")
        attribute: (jsx_attribute
          (property_identifier "prop3")
          (jsx_expression
            (identifier "value16")
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "element",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 14,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Component2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 18,
                end_line: 1,
                end_column: 28,
            },
        },
        Usage {
            name: "prop3",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 29,
                end_line: 1,
                end_column: 34,
            },
        },
        Usage {
            name: "value16",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 36,
                end_line: 1,
                end_column: 43,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
