crates/test-generator/tests/snapshots/tsx/test_generated_lookup_type.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
type Obj = { key: string }; const value18: Obj['key'] = 'test';

AST:
(program
  (type_alias_declaration
    name: (type_identifier "Obj")
    value: (object_type
      (property_signature
        name: (property_identifier "key")
        type: (type_annotation
          (predefined_type "string")
        )
      )
    )
  )
  (lexical_declaration
    (variable_declarator
      name: (identifier "value18")
      type: (type_annotation
        (lookup_type
          (type_identifier "Obj")
          (literal_type
            (string
              (string_fragment)
            )
          )
        )
      )
      value: (string
        (string_fragment)
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:9 }, name: "Obj", definition_type: TypeDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(true) },
        Definition { position: { 1:14 to 1:17 }, name: "key", definition_type: PropertyDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:35 to 1:42 }, name: "value18", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:44 to 1:47 }, name: "Obj", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
