crates/test-generator/tests/snapshots/tsx/test_generated_member_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
obj1.prop4

AST:
(program
  (expression_statement
    (member_expression
      object: (identifier "obj1")
      property: (property_identifier "prop4")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "obj1",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 5,
            },
            context: None,
        },
        Usage {
            name: "prop4",
            kind: FieldExpression,
            position: Position {
                start_line: 1,
                start_column: 6,
                end_line: 1,
                end_column: 11,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
