crates/test-generator/tests/snapshots/tsx/test_generated_object.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
{ prop11: value110, prop21: value21 }

AST:
(program
  (expression_statement
    (object
      (pair
        key: (property_identifier "prop11")
        value: (identifier "value110")
      )
      (pair
        key: (property_identifier "prop21")
        value: (identifier "value21")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:11 to 1:19 }, name: "value110", kind: Identifier, context: None },
        Usage { position: { 1:29 to 1:36 }, name: "value21", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
